chore: remove unnecessary object 'student_data' in create functions
